src/test/deca/context/valid/Objet/protect_interclass_select1.deca
// Description:
//    test de la sélection d'un attribut protégé dans une classe fille
//
// Resultats:
//   
//
// Historique:
//    cree le 19/01/2022

class A {
    protected int i ;
    
}
class B extends A {
    int get(){
        return this.i ;
    }
}
{}



